K8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-rental
  namespace: car-rental
spec:
  replicas: 2
  selector:
    matchLabels:
      app: car-rental
  template:
    metadata:
      labels:
        app: car-rental
    spec:
      containers:
        - name: car-rental
          image: 530639775842.dkr.ecr.ap-south-1.amazonaws.com/car-rental:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
