K8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-rental-service
spec:
  type: ClusterIP
  selector:
    app: car-rental
  ports:
    - port: 80
      targetPort: 3000
