K8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-rental-ingress
  namespace: car-rental
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0ff1d2cc7bbc587ab,subnet-054bcb34cdeeb0719
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: car-frontend-service
                port:
                  number: 80
